--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:theme="@style/Theme.InventoryManagementApp"
         tools:targetApi="31">
         <activity
+            android:windowSoftInputMode="stateHidden"
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
